# ros2_4_wheeled_robot_gazebo

./: README.md
ROS/: README.md
ROS/rover/: package.xml  setup.py
ROS/rover/urdf/: rover.urdf
dolly/dolly_ignition/env-hooks/: dolly_ignition.dsv.in  dolly_ignition.sh.in
dolly/dolly_ignition/launch/: dolly.launch.py
dolly/dolly_ignition/models/dolly_ignition/: model.sdf  model.urdf
dolly/dolly_ignition/worlds/: station.sdf
