<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>rover</name>
<version>0.0.0</version>
<description>TODO: Package description</description>
<maintainer email="your@gmail.com">Name</maintainer>
<license>TODO: License declaration</license>
<depend>rclpy</depend>
<test_depend>ament_copyright</test_depend>

<test_depend>joint_state_publisher_gui</test_depend>
<test_depend>robot_state_publisher</test_depend>
<export>
<build_type>ament_python</build_type>
</export>
</package>
